# rust-meta-prog-procedural-macros-ex-1

./: Cargo.toml  readme.MD
src/: lib.rs
tests/: run.rs
