[package]
name = "derive-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.80", features = ["diff"] }

[dependencies]
syn = { version = "2.0.13", features = ["extra-traits", "full"] }
quote = "1.0.26"